2009-10-26 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number to 2.29.2.

2009-10-25 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.

	* po/POTFILES.in: Update list of translatable files.

	* src/runtime/na-iabout.c (na_iabout_display):
	Do not mark authors names and emails for translating (#599520).

	* src/runtime/na-object-profile.c (is_current_folder_inside):
	Actually checks if current folder is inside one of specified folders.

	* src/nact/nact-iactions-list.c
	(nact_iactions_list_dispose): free list of modified items.
	(nact_iactions_list_fill): reset level_zero_order_changed flag.

	* src/nact/nact-main-menubar.c (on_level_zero_order_changed):
	The message now brings up the flag to be set.

	* src/nact/nact-tree-model.c (drop_inside):
	Set the level_zero_order_changed flag to TRUE.

	* src/nact/nact-preferences-editor.c
	(on_base_runtime_init_dialog, save_preferences):
	Let the user edit its preferred export format.

	* src/nact/nautilus-actions-config-tool.ui:
	Add Export tab to Preferences dialog.

2009-10-23 Pierre Wieser <pwieser@trychlos.org>

	Populates Nautilus background menus and Nautilus toolbar.
	Defines required new properties:
	- target_selection: whether the action is candidate to selection menus
	- target_background: whether the action is candidate to background menus
	- target_toolbar: whether the action is candidate to toolbar display
	- short_label: the toolbar label
	- use_same_label: whether the toolbar label is the same that those of the
	action.

	* data/nautilus-actions.schemas.in:
	* src/common/na-xml-names.h:
	Define the new keys.
	Make sure key descriptions are equal to those in nact-xml-names.h.

	* src/common/na-xml-writer.c
	(create_xml_schema, create_xml_dump): Export the new keys.
	(create_gconf_schema): Export the new schemas.

	* src/nact/nact-ibackground-tab.c:
	* src/nact/nact-ibackground-tab.h:
	* src/nact/nact-main-tab.c: New files

	* src/nact/Makefile.am: Updated accordingly.
